documentation has been improved

--- a/dont_start_new.html
+++ b/dont_start_new.html
@@ -12,16 +12,20 @@
 <h2>why not simply re-do the lottery?</h2>
 
 <div id="explanation">
-<h3>It seems fair...a simple example</h3>
-<p>4 places, 1 group of 4, + 4 solo guests
+
+<h3>it doesn't work</h3>
+<p>Example: you have 4 places, 4 solo guests and 1 team of 3.
 </p>
-
-<h3>But often, it will fail...</h3>
-<p>If you have 5 places, and 1 more solo guest.
-In 4 cases out of 5, you will have a 33% chance that you must redo the selection.
-In 1 case out of 5, the group of 4 will be included.
-
+<ul>
+<li>The probability that you will draw 4 soloists is:
+<br>4/5 x 3/4 x 2/3 x 1/2 = 1/5
+<li>1/5 is the probability that you immediately draw the team.
+<li>And the probability that the team is drawn second, is
+<br> 4/5 x 1/4 = 1/5 .
+</ul>
+<br> So the team has a chance of 2/5 to be selected.
+1 of the soloists will be added, so this increases their chances by 1/4 x 2/5 = 1/10. 
+<br>So far, the soloists have a chance of 1/5 + 1/10 = 30%.
+The team has a chance of 2/5 = 40%
+<br>In the remaing cases, the draw is invalid. </p>
 </div>
-
-<a href='./webform.html'>Click here to start</a>
-
