--- a/webform.html
+++ b/webform.html
@@ -30,7 +30,7 @@ When you enter a group size, it will be added below.<br>
 
 <h3>Results</h3>
 <button id="csvDownload1" onclick="download('groups.csv', optimizer.resultCsv())" hidden >Export results to csv file</button>
-<p id="output">hit [F12] to view console.</p>
+<p id="output"></p>
 <button id="csvDownload2" onclick="download('groups.csv', optimizer.resultCsv())" hidden>Export results to csv file</button>
 <p id="progress_message"></p>
 
