--- a/webform.html
+++ b/webform.html
@@ -26,9 +26,9 @@ When you enter a group size, it will be added below.<br>
 
 <h3>groups</h3>
 <div id="numberBoxes"></div>
-<button type="button" id="findCombinationsByIP" onclick="findCombinationsByIP()" hidden>find combinations</button>
+<button type="button" id="findCombinationsByIP" onclick="findCombinationsByIP()" hidden>try quick solution</button>
 <div id="numberBoxes"></div>
-<button type="button" id="findCombinationsByIterations" onclick="findCombinationsByIterations()" hidden>find combinations</button>
+<button type="button" id="findCombinationsByIteration" onclick="findCombinationsByIteration()" hidden>try every solution</button>
 
 <h3>Results</h3>
 <button id="csvDownload1" onclick="download('groups.csv', optimizer.resultCsv())" hidden >Export results to csv file</button>
@@ -138,7 +138,7 @@ When you enter a group size, it will be added below.<br>
 
     // show the findCombinations button
     document.getElementById('findCombinationsByIP').removeAttribute("hidden")
-    document.getElementById('findCombinationsByIterations').removeAttribute("hidden")
+    document.getElementById('findCombinationsByIteration').removeAttribute("hidden")
 
     // keep sorted by groupSize
     for (i=storedData.length -2; 0<= i ; i--)
@@ -175,7 +175,7 @@ When you enter a group size, it will be added below.<br>
       storedData = storedData.filter(item => item.id !== id);
 	if (0===storedData.length)
 	{     document.getElementById('findCombinationsByIP').setAttribute("hidden", 'hidden')
-	document.getElementById('findCombinations').setAttribute("hidden", 'hidden')
+	document.getElementById('findCombinationsByIteration').setAttribute("hidden", 'hidden')
 
 	}
     } else {
@@ -251,6 +251,16 @@ function setCombinations()
 
 		displayText += "<br>number of valid combinations : "+ optimizer.combinations.length
 		combinationPossible = true
+		displayText += "<br> Some combinations are <br> \n $$";
+		optimizer.selectAllCombinations()
+		var i = 0;
+		for (i=0; i<8 && i<optimizer.selection.length; i++)
+		{
+			// displayText +=  optimizer.selectedToTex(i)
+			displayText +=  optimizer.calculationTeX(i,false)
+		}
+		displayText += " $$ <br>";
+
 	}
 	document.getElementById("output").innerHTML = displayText;
 	document.getElementById("progress_message").innerHTML = "Combinations have been tried.";
@@ -261,6 +271,11 @@ function findCombinationsByIP()
 {
    if (!checkNumbers()) {return;	}
    if (!setCombinations()) {return;	}
+   selectCombinations()
+}
+
+function selectCombinations() 
+{
 
 	if (! optimizer.selectBestCombinations())
 	{	displayText += "<br> --- I could not find a good solution ! --- "
@@ -297,6 +312,16 @@ function findCombinationsByIP()
 	document.getElementById("csvDownload2").removeAttribute("hidden");
 	  MathJax.Hub.Queue(["Typeset", MathJax.Hub, document.getElementById("output")]);
 } 
+function findCombinationsByIteration() 
+{
+   if (!checkNumbers()) {return;	}
+   if (!setCombinations()) {return;	}
+   adjustWeights()
+}
+function adjustWeights() 
+{	
+}
+
 </script>
 
 </body>
