--- a/webform.html
+++ b/webform.html
@@ -228,8 +228,9 @@ When you enter a group size, it will be added below.<br>
 	else // more candidates than places
 	{
 	displayText += "<br>There are " +optimizer.nCandidates+ " candidates "
-			+ "for only "+ nPlaces + " places. <br>\n"
-
+			+ "for only "+ nPlaces + " places.\n"
+	displayText += "<br>Everyone should have a chance of "+nPlaces+" / "+optimizer.nCandidates+" = "+optimizer.pAim +"<br>"
+	
 	document.getElementById("output").innerHTML = displayText;
 	return true
 	}
@@ -272,6 +273,9 @@ function findCombinationsByIP()
    if (!checkNumbers()) {return;	}
    if (!setCombinations()) {return;	}
    selectCombinations()
+   showQuality()
+   MathJax.Hub.Queue(["Typeset", MathJax.Hub, document.getElementById("output")]);
+
 }
 
 function selectCombinations() 
@@ -291,7 +295,6 @@ function selectCombinations()
 	{	// displayText +=  " .... "
 	}
 	displayText += " $$ <br>";
-	displayText += "Everyone should have a chance of "+nPlaces+" / "+optimizer.nCandidates+" = "+optimizer.pAim +"<br>"
 	displayText += "<br> I recommend the following probabilities for each combination:";
 
 	document.getElementById("output").innerHTML = displayText;
@@ -300,6 +303,10 @@ function selectCombinations()
 	console.log(comb["combinations"])
 	console.log(comb["calculations"])
 	displayText += "<br>  "+optimizer.resultsTable(5)
+
+}
+function showQuality() 
+{
 	displayText += "<br> Quality of the results:";
 
 	displayText += "<br>  "+optimizer.chancesTable(3)
@@ -310,16 +317,15 @@ function selectCombinations()
 
 	document.getElementById("csvDownload1").removeAttribute("hidden");
 	document.getElementById("csvDownload2").removeAttribute("hidden");
-	  MathJax.Hub.Queue(["Typeset", MathJax.Hub, document.getElementById("output")]);
 } 
 function findCombinationsByIteration() 
 {
    if (!checkNumbers()) {return;	}
    if (!setCombinations()) {return;	}
-   adjustWeights()
-}
-function adjustWeights() 
-{	
+   optimizer.initialWeights()
+   optimizer.improveWeights(99)
+   showQuality()
+   MathJax.Hub.Queue(["Typeset", MathJax.Hub, document.getElementById("output")]);
 }
 
 </script>
